crates/figue/tests/integration/snapshots/main__integration__sequence__noargs_vec_positional_no_default.snap
---
source: crates/figue/tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:6 ]
   │
 1 │ main <files>
   │      ───┬───  
   │         ╰───── Files to process (at least one required)
───╯
